--- a/style.css
+++ b/style.css
@@ -1,31 +1,41 @@
 body {
 
-    background-color: rgb(126, 125, 125);
+    background-color: rgb(90, 90, 90);
 
 }
 
-.container-fluid {
+header {
 
-    height: 80px;
+    height: 75px;
     border-bottom: rgb(136, 3, 3) 2px solid;
-    background-color: rgb(44, 44, 44);
+    background-color: rgb(34, 34, 34);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
 
 }
 
 h1 {
 
-    background-color: ;
+    background-color: rgb(128, 94, 3, 0.3);
     color: rgb(233, 231, 231);
-    height: 100%;
-    margin: 0;
-    padding: 30px;
+    border-bottom: rgb(136, 3, 3) 2px solid;
+    height: 75px;
+    width: 320px;
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-left: 5%;
     display: flex;
     align-items: center;
-    position: relative;
-    left: 20px;
+    justify-content: center;
+
+}
+
+nav {
+
+    margin-right: 5%;
 
 }
 
@@ -46,12 +56,24 @@ nav a {
 
 nav a:hover {
 
-    color: rgb(0, 195, 255);
+    color: rgb(168, 145, 80);
 
 }
 
 .no-border {
 
     border: none !important;
+
+}
+
+.container-fluid {
+
+    padding: 0px;  
+
+}
+
+.no-padding {
+
+    padding: 0;
 
 }
