--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
 
 h1 {
 
-    border-left: rgb(155, 123, 36) 2px solid;
+    border-left: rgb(153, 125, 46) 2px solid;
     box-shadow: -2px 0 rgb(110, 1, 1);
     color: rgb(233, 231, 231);
     font-size: 200%;
@@ -27,7 +27,7 @@ h1 {
     width: 240px;
     margin-bottom: 0;
     margin-top: 0;
-    margin-left: 5%;
+    margin-left: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,13 +51,13 @@ nav li {
 
 nav a {
 
-    color: white;
+    color: rgb(233, 231, 231);;
 
 }
 
 nav a:hover {
 
-    color: rgb(168, 147, 90);
+    color: rgb(201, 170, 87);
 
 }
 
@@ -76,5 +76,52 @@ nav a:hover {
 .no-padding {
 
     padding: 0;
+
+}
+
+.about-container {
+
+    background-color: rgb(34, 34, 34);
+    border: rgb(110, 1, 1) 2px solid;
+    margin-left: 5%;
+    margin-top: 30px;
+
+}
+
+h2 {
+
+    color: rgb(233, 231, 231);
+    margin: 20px 15px 0 15px;
+    padding-bottom: 20px;
+    border-bottom: rgb(194, 159, 63) 2px solid;
+
+}
+
+.about-p1 {
+
+    margin: 20px 0 0 0;
+
+}
+
+.about-p2 {
+
+    margin: 20px 0 30px 0;
+
+}
+
+.profile-pic {
+
+    float: left;
+    width: 205px;
+    margin-right: 22px;
+    margin-top: 8px;
+
+}
+
+p {
+
+    color: rgb(233, 231, 231);
+    margin-bottom: 0;
+    line-height: 1.8;
 
 }
