--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
+html {
+
+    width: 100%
+
+}
+
 body {
 
     background-color: rgb(90, 90, 90);
+
+}
+
+.container-fluid {
+
+    width: 100%;
 
 }
 
@@ -11,7 +23,6 @@ header {
     background-color: rgb(34, 34, 34);
     display: flex;
     align-items: center;
-    justify-content: space-around;
     padding: 0;
     margin: 0;
 
@@ -37,6 +48,8 @@ h1 {
 nav {
 
     margin-right: 5%;
+    width: 265px;
+    float: right;
 
 }
 
@@ -67,9 +80,9 @@ nav a:hover {
 
 }
 
-.container-fluid {
+.no-right-padding {
 
-    padding: 0px;  
+    padding-right: 0px;
 
 }
 
@@ -123,5 +136,12 @@ p {
     color: rgb(233, 231, 231);
     margin-bottom: 0;
     line-height: 1.8;
+
+}
+
+.no-wrap {
+
+    display: flex;
+    flex-wrap: nowrap;
 
 }
