--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 }
 
-header {
+header,footer {
 
     height: 80px;
     border-bottom: rgb(110, 1, 1) 2px groove;
@@ -13,6 +13,13 @@ header {
     align-items: center;
     padding: 0 1.5%;
     margin: 0;
+
+}
+
+.border-top {
+
+    border-bottom: none;
+    border-top: rgb(110, 1, 1) 10px groove;
 
 }
 
@@ -69,7 +76,13 @@ nav a:hover {
 
 .no-right-padding {
 
-    padding-right: 0px;
+    padding-right: 0;
+
+}
+
+.no-left-padding {
+
+    padding-left: 0;
 
 }
 
@@ -82,8 +95,7 @@ nav a:hover {
 .content-row {
 
     width: 600px;
-    margin: 0;
-    padding: 0 15px 0 10px;
+    margin: 0 15px;
 
 }
 
@@ -91,8 +103,7 @@ nav a:hover {
 
     background-color: rgb(34, 34, 34);
     border: rgb(110, 1, 1) 2px ridge;
-    margin-top: 30px;
-    margin-left: 1.5%;
+    margin: 30px 0 60px 1.5%;
     width: 600px;
 
 }
@@ -142,6 +153,12 @@ p {
 
 }
 
+.portfolio-row {
+
+    padding: 0 30px;
+
+}
+
 .col-md-6 img {
 
     width: 250px;
@@ -178,5 +195,31 @@ p {
     color: rgb(233, 231, 231);
     margin: 5px;
     font-size: 135%;
+
+}
+
+form {
+
+    color: rgb(233, 231, 231);
+    margin: 0 15px 20px 15px;
+
+}
+
+.form-control {
+
+    border-radius: 0;
+    border: none;
+    background-color: rgb(53, 53, 53);
+
+}
+
+button {
+
+    border: none;
+    background-color: rgb(90, 0, 0);
+    color: rgb(233, 231, 231);
+    width: 100px;
+    height: 40px;
+    margin-top: 10px;
 
 }
