--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 
     background-color: rgb(71, 71, 71);
+    height: 100%;
 
 }
 
@@ -92,13 +93,6 @@ nav a:hover {
 
 }
 
-.content-row {
-
-    width: 600px;
-    margin: 0 15px;
-
-}
-
 .content-container {
 
     background-color: rgb(34, 34, 34);
@@ -156,20 +150,32 @@ p {
 .portfolio-row {
 
     padding: 0 30px;
+    flex-wrap: nowrap;
+
+}
+
+.img-container {
+
+    width: 100%;
+    margin-bottom: 35px;
+    display: flex;
+    justify-content: center;
 
 }
 
 .col-md-6 img {
 
-    width: 250px;
-    margin-bottom: 35px;
+    width: 100%;
 
 }
 
-.center {
+.port-img-col {
 
     display: flex;
     justify-content: center;
+    padding: 0;
+    margin: 0 15px;
+    max-width: 253px;
 
 }
 
@@ -182,19 +188,29 @@ p {
 .text-box {
 
     background-color: rgb(51, 0, 0);
-    width: 250px;
+    width: 100%;
     height: 50px;
-    text-align: center;
     position: absolute;
-    top: 125px;
+    bottom: 40px;
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
 
 }
 
 .text {
 
     color: rgb(233, 231, 231);
-    margin: 5px;
     font-size: 135%;
+    display: flex;
+    align-self: center;
+
+}
+
+.content-row {
+
+    width: 100%;
+    margin: 0 15px;
 
 }
 
@@ -221,5 +237,62 @@ button {
     width: 100px;
     height: 40px;
     margin-top: 10px;
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .content-container {
+
+        width: 97%;
+
+    }
+
+    .port-img-col {
+
+        max-width: 97%;
+
+    }
+
+    .text-box {
+
+        height: 20%;
+
+    }
+
+
+}
+
+@media screen and (max-width: 640px) {
+
+    .content-container {
+
+        width: 97%;
+
+    }
+
+    .portfolio-row {
+
+        flex-wrap: wrap;
+
+    }
+
+    .port-img-col {
+
+        max-width: 97%;
+
+    }
+
+    .text-box {
+
+        height: 20%;
+
+    }
+
+    .text {
+
+        font-size: 225%;
+
+    }
 
 }
